# SOL_2023

./: CMakeLists.txt  auxiliaryMW.c  auxiliaryMW.h  collector  collector.c  collector.h  list.c  list.h  makefile  masterWorker  masterWorker.c  test.sh  workers.c  workers.h
SOL/: CMakeLists.txt  auxiliaryMW.h  collector  collector.c  collector.h  list.c  list.h  makefile  masterWorker  masterWorker.c  masterworker  oio.txt  workers.c  workers.h
SOL/pluto/: oio.txt
pluto/pippo/rebi/lori/: ultimo.txt
